--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,30 +1,33 @@
-<nav class="navbar">
+<nav class="navbar navbar-expand-lg">
 	<div class="container">
-		<div class="row">
-			<div class="col-xl-3 col-6">
-			<a class="navbar-brand" href="#">
-				<img src="./assets/logo-header.png" class="d-inline-block align-top" alt="">
-			</a>
-			</div>
-		</div>
+		<button class="navbar-toggler btn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #f6b810;"><img src="./assets/ícono-search.png" alt=""></button>
 		<div class="row">
 			<div class="col-xl-12">
-		  	<form class="form-inline">
-			    <input class="form-control" type="search" placeholder="¿Qué quieres buscar?" aria-label="Search">
-			    <button class="btn" type="submit"><img src="./assets/ícono-search.png" class="d-inline-block align-top" alt=""></button>
-			</form>
+				<a class="navbar-brand" href="#">
+					<img src="./assets/logo-header.png" class="d-inline-block align-top" alt="">
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<div class="col-xl-12">
+				  	<form class="form-inline">
+					    <input class="form-control" type="search" placeholder="¿Qué quieres buscar?" aria-label="Search">
+					    <button class="btn" type="submit"><img src="./assets/ícono-search.png" alt=""></button>
+					</form>
+			  	</div>
 		  	</div>
 		</div>
 		<div class="row">
-		  	<div class="col-xl-12 col-6">
-		  	<a class="navbar-brand" href="#">
-				<img src="./assets/fb.png" class="d-inline-block align-top" alt="">
-			</a>
-			<a class="navbar-brand" href="#">
-				<img src="./assets/instagram.png" class="d-inline-block align-top" alt="">
-			</a>
+		  	<div class="col-xl-12">
+			  	<a class="navbar-brand" href="#">
+					<img src="./assets/fb.png" class="d-inline-block align-top" alt="">
+				</a>
+				<a class="navbar-brand" href="#">
+					<img src="./assets/instagram.png" class="d-inline-block align-top" alt="">
+				</a>
 			</div>
 		</div>
   	</div>
 </nav>
-
