--- a/src/app/nosotros/nosotros.component.html
+++ b/src/app/nosotros/nosotros.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xl-12">
+		<div class="col-xl-12 about">
 			<h3>Nosotros</h3>
 			<p>
 			Somos una empresa comprometida con la competencia en el comercio electrónico en México, por eso construimos Paragon, que te permite comparar los precios en tiempo real de miles de productos diferentes en más de 60 sitios de comercio electrónico, incluyendo Amazon México, Linio, Mercado Libre y Walmart, entre otros.
