--- a/src/app/products-detail/products-detail.component.html
+++ b/src/app/products-detail/products-detail.component.html
@@ -49,7 +49,7 @@
 	              <div class="col-md-12">
 	                <div class="form-group">
 	                    <label>Comentario</label>
-	                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+	                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
 	                </div>
 	              </div>
 	            </div>
