--- a/src/app/terminos/terminos.component.html
+++ b/src/app/terminos/terminos.component.html
@@ -1,3 +1,18 @@
-<p>
-  terminos works!
-</p>
+<div class="container">
+	<div class="row">
+		<div class="col-xl-12 terms">
+			<h3>Términos de uso</h3>
+				<p>
+					Paragon.mx es un sitio meramente informativo e independiente y no se responsabiliza por los precios publicados. Tratamos de obtener para cada producto la información más completa y actualizada que esté disponible en cada uno de los sitos de dónde se obtiene la información.		
+
+					Todas las imágenes, logotipos e información de los productos son exclusivamente propiedad de las compañías a las que se hace referencia y se muestran con carácter meramente ilustrativo.
+
+					Los comentarios son responsabilidad de los usuarios. Paragon.mx puede editar o borrar el contenido publicado en cualquier momento.
+
+					Queda prohibido la reproducción en otros sitios web sin autorización previa.
+
+					Sólo los administradores tendrán acceso al correo electrónico que registres en Paragon y nunca será compartido con terceros, al menos que seamos obligados por la ley.
+				</p>
+		</div>
+	</div>
+</div>
