--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,5 +1,5 @@
-<h2>My Secondary Content</h2>
-
-<ul>
-  <li>Hey whats up</li>
-</ul>
+<div class="row">
+	<div class="col-ml-12" style="background-color: blue;">
+		<p>hola</p>
+	</div>
+</div>
