--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -10,7 +10,7 @@
 	padding-top: 20px;
 }
 .footer_contact h4{
-	font-family: 'Lato:700', sans-serif;
+	font-family: 'Lato',sans-serif;
 	font-size: 18pt;	
 }
 .subscribe{
@@ -34,4 +34,4 @@
 	color: white; 
 	text-decoration: none;
 	padding: 5px;
-}
+} 
