--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,30 +1,32 @@
-<div class="row subscribe">
-	<div class="col-xl-12">
+
+	<div class="col-xl-12 subscribe">
 		<h2>Suscríbete y recibe las mejores ofertas y promociones</h2>
 		<p>Encuentra el sitio con los mejores precios de los productos que a ti te interesan</p>
 		<a href="">Suscribirse</a>
 	</div>
-</div>
 
-<div class="row footer_contact" align="center">
-	<div class="col-xl-4">
-		<h4>ACERCA DE NOSOTROS</h4>
-		<p>
-			Conoce más acerca de nosotros <a routerLink="/acerca">aquí.</a>
-		</p>
+	<div class="col-xl-12 footer_contact"align="center">
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-4">
+					<h4>ACERCA DE NOSOTROS</h4>
+					<p>Conoce más acerca de nosotros <a routerLink="/acerca-de-nosotros">aquí.</a></p>
+				</div>
+				<div class="col-xl-4">
+					<h4>TERMINOS Y CONDICIONES</h4>
+					<p>Conoce nuestros términos de uso <a routerLink="/terminos-y-condiciones">aquí.</a></p>
+				</div>
+				<div class="col-xl-4">			
+					<h4>CONTACTO</h4>
+					<p>contacto@paragon.mx</p>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="col-xl-4">
-		<H4>TERMINOS Y CONDICIONES</H4>
-		<p>Conoce nuestros términos de uso <a href="">aquí.</a></p>
-	</div>
-	<div class="col-xl-4">
-		<h4>CONTACTO</h4>
-		<p>contacto@paragon.mx</p>
-	</div>
-</div>
 
-<div class="row footer">
-	<div class="col-xl-12">
-		© 2018 PARAGON Todos los derechos reservados.					
+	<div class="col-xl-12 footer">
+		<p> © 2018 PARAGON Todos los derechos reservados. </p>					
 	</div>
-</div>
+
+
+
