--- a/src/app/product-box/product-box.component.html
+++ b/src/app/product-box/product-box.component.html
@@ -1,25 +1,27 @@
 <div class="container">
   <div class="row">
     <div class="col-xl-12">
-      <div class="card">
-        <img class="card-img-top" src="./assets/producto-prueba.jpg" alt="Card image cap">
-        <div class="card-body">
-          <div class="card-text">
-            <h4>Nintendo Switch</h4>
-            <p class="product-meta">
-              DESDE <span>$7200</span> en <br>
-              <span>6</span> sitios
-            </p>
-            <p class="product-rating">
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-            </p>
-          </div>
+        <div class="card">
+          <a routerLink="./products">
+            <img class="card-img-top" src="./assets/producto-prueba.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="card-text">
+                <h4>Nintendo Switch</h4>
+                <p class="product-meta">
+                  DESDE <span id="precio">$7200</span> en <br>
+                  <span>6</span> sitios
+                </p>
+                <p class="products-rating">
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>                
+                </p>
+              </div>
+            </div>
+          </a>
         </div>
-      </div>
     </div>
   </div>
 </div>
