--- a/src/app/products-detail/products-detail.component.html
+++ b/src/app/products-detail/products-detail.component.html
@@ -1,12 +1,10 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xl-4">
+		<div class="col-xl-4" align="center">
 			 <img src="./assets/producto-prueba.jpg" alt="Card image cap">
 		</div>
 		<div class="col-xl-8" style="padding: 30px 0px;">
-			<p>
-				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-			</p>
+			<p id="descripcion">{{descripcion.substr(0,320)}}</p>
 		</div>
 	</div>
 	<div class="row">
@@ -66,7 +64,24 @@
 	                  <input type="text" class="form-control" value="" name="telefono" id="telefono" required>
 	                </div>
 	              </div>
-	            </div> 
+	            </div>
+	            <div class="row">
+	              <div class="col-md-12">
+	              	<div class="form-group">
+	              		<span>
+	              			<input id="radio1" type="radio" name="estrellas" value="5">
+	              			<i class="fa fa-star-o" aria-hidden="true" for="radio1"></i>
+	              			<input id="radio1" type="radio" name="estrellas" value="4">
+	              			<i class="fa fa-star-o" aria-hidden="true"></i>
+	              			<input id="radio1" type="radio" name="estrellas" value="3">
+	              			<i class="fa fa-star-o" aria-hidden="true"></i>
+	              			<input id="radio1" type="radio" name="estrellas" value="2">
+	              			<i class="fa fa-star-o" aria-hidden="true"></i>
+	              			<input id="radio1" type="radio" name="estrellas" value="1">
+	              		</span>
+	              	</div>
+	              </div>
+	            </div>  
 	            <div class="row">
 	            	<div class="col-md-12">    
 	            		<button type="submit" class="btn btn-secondary btn-lg btn-block">Enviar</button>
