--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -17,9 +17,16 @@
 
 @media only screen and (max-width: 600px) {
 	.form-inline input{
-	width: 300px;
+	width: 270px;
+	border-radius: 10px 0px 0px 10px;
+	border: none;
+	}	
+}
+
+@media only screen and (min-width: 768px) {
+	.form-inline input{
+	width: 500px;
 	border-radius: 10px 0px 0px 10px;
 	border: none;
 	}
-	
 }
