--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,3 +1,9 @@
+/*carusel de home page */
+#swiper-header {
+  width: 100%;
+  height: 100%;
+}
+/*navbar de categoerias*/
 .navbar{
 	background-color:#f5f5f5; 
 	height:50px;
@@ -9,7 +15,32 @@
 	color: #fff;
 	width: 245px;
 	border: none; 
-	top: 1.5px;
 	position: relative; 
 	background-color: #f6b810; 
 }
+
+#swiper-categorias{
+  position: relative;
+  left: 40px;
+  width: 80%;
+  height: 50%;
+}
+
+/*carousel de productos*/
+.swiper-slide{
+  /* Center slide text vertically */
+ /* border: 1px solid black;*/
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
