--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,29 +1,18 @@
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="./assets/imagen-principal.png" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./assets/imagen-principal.png" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./assets/imagen-principal.png" alt="Third slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+<!-- Slider main container -->
+<div class="swiper-container" id="swiper-header">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide"><img class="d-block w-100" src="./assets/imagen-principal.png" alt="First slide"></div>
+    <div class="swiper-slide"><img class="d-block w-100" src="./assets/imagen-principal.png" alt="Second slide"></div>
+    <div class="swiper-slide"><img class="d-block w-100" src="./assets/imagen-principal.png" alt="Third slide"></div>
   </div>
+
+  <!-- Add Pagination -->
+  <div class="swiper-pagination"></div>
+  
+  <!-- Add Arrows -->
+  <div class="swiper-button-next swiper-button-white"></div>
+  <div class="swiper-button-prev swiper-button-white"></div>
+</div>
 
 <nav class="navbar">
   <div class="container">
@@ -39,31 +28,63 @@
         </div>
       </div>
     </div>
+      <div class="swiper-container" id="swiper-categorias">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__equipaje.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__mascotas.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
   </div>
 </nav>
 <div class="container">
-<div class="row">
-  <div class="col-xl-12">
-    <h3>Los mas vistos</h3>
-    <app-product-box></app-product-box>
+  <div class="row">
+    <div class="col-xl-12">
+      <h3>Los mas vistos</h3>
+    </div>
+  </div>
+ 
+  <!-- Swiper -->
+  <div class="swiper-container" id="p_vistos">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+      <div class="swiper-slide"><app-product-box></app-product-box></div>
+    </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
   </div>
 </div>
-<div class="row">
-  <div class="col-xl-12">
-    <h3>Los mas vendidos</h3>
-    <app-product-box></app-product-box>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xl-12">
-    <h3>Mas reciente</h3>
-    <app-product-box></app-product-box>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xl-12">
-    <h3>Los mejor calificados</h3>
-     <app-product-box></app-product-box>
-  </div>
-</div>
-</div>
+
