--- a/src/app/product-box/product-box.component.css
+++ b/src/app/product-box/product-box.component.css
@@ -1,6 +1,7 @@
 .row{
-	padding: 30px;
+	padding: 30px 0;
 }
+
 .card{
 	width:224px;
 	height:360px;
@@ -25,4 +26,35 @@
 
 .title{
 	font-size: 22pt;
+}
+ .card-text h4{
+ 	display: block;
+    color: #162b32;
+    font-family: 'Lato',sans-serif;
+    font-size: 14pt;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.product-meta{
+	margin: 0;
+    font-size: 14px;
+    text-decoration: none;
+}
+
+.card a{
+	text-decoration:none;
+	color: #bfbdbd;
+}
+
+.product-meta{
+	font-family: 'Lato', sans-serif;
+	font-family: 14pt;
+	font-weight: bold;
+	color: black;
+}
+
+#precio{
+	color:#d84523;
+	font-weight: 700;
 }
