--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,5 +1,12 @@
+.label{
+  padding-top: 30px;
+}
+.label h3{
+  font-size: 22pt;
+  font-family: 'Montserrat';
+}
 /*carusel de home page */
-#swiper-header {
+#swiper-header img{
   width: 100%;
   height: 100%;
 }
@@ -28,8 +35,6 @@
 
 /*carousel de productos*/
 .swiper-slide{
-  /* Center slide text vertically */
- /* border: 1px solid black;*/
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -42,5 +47,19 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+}
+
+.p_vistos .swiper-pagination{
+  position: relative; 
+  top: 10px;
+  left: 500px;
+}
+
+@media only screen and (max-width: 600px) {
+  .p_vistos .swiper-pagination{
+    position: relative; 
+    bottom: 10px;
+    left: 0;
+  } 
 }
 
