--- a/src/app/product-box/product-box.component.html
+++ b/src/app/product-box/product-box.component.html
@@ -1,15 +1,16 @@
 <div class="container">
   <div class="row">
-    <div class="col-xl-12">
-        <div class="card">
+    <div class="col-xl-6">
+      <div class="card-columns">
+        <div *ngFor="let productos of producto" class="card">
           <a routerLink="./products">
-            <img class="card-img-top" src="./assets/producto-prueba.jpg" alt="Card image cap">
+            <img class="card-img-top img-fluid" src="./assets/producto-prueba.jpg" alt="Card image cap">
             <div class="card-body">
               <div class="card-text">
-                <h4>Nintendo Switch</h4>
+                <h4>{{productos.name}}</h4>
                 <p class="product-meta">
-                  DESDE <span id="precio">$7200</span> en <br>
-                  <span>6</span> sitios
+                  DESDE <span id="precio">${{productos.precio}}</span> en <br>
+                  <span>{{productos.sitio}}</span> sitios
                 </p>
                 <p class="products-rating">
                   <i class="fa fa-star-o" aria-hidden="true"></i>
@@ -22,6 +23,7 @@
             </div>
           </a>
         </div>
+      </div>
     </div>
   </div>
 </div>
