--- a/src/app/products-detail/products-detail.component.css
+++ b/src/app/products-detail/products-detail.component.css
@@ -12,3 +12,34 @@ h2{
 .row{
 	padding: 10px 0px;
 }
+
+.swiper-slide{
+  /* Center slide text vertically */
+ /* border: 1px solid black;*/
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-pagination{
+	position: relative; 
+	top: 10px;
+	left: 500px;
+}
+
+@media only screen and (max-width: 600px) {
+	.swiper-pagination{
+		position: relative; 
+    	bottom: 10px;
+    	left: 0;
+	}	
+}
