--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <!-- Slider main container -->
-<div class="swiper-container" id="swiper-header">
+<div class="swiper-container .swiper-header" id="swiper-header">
   <div class="swiper-wrapper">
     <div class="swiper-slide"><img class="d-block w-100" src="./assets/imagen-principal.png" alt="First slide"></div>
     <div class="swiper-slide"><img class="d-block w-100" src="./assets/imagen-principal.png" alt="Second slide"></div>
@@ -16,7 +16,7 @@
 
 <nav class="navbar">
   <div class="container">
-    <div class="row">
+    <div class="row didden-xs">
       <div class="dropdown">
         <button class="btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Categorías
@@ -28,48 +28,48 @@
         </div>
       </div>
     </div>
-      <div class="swiper-container" id="swiper-categorias">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__equipaje.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__mascotas.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-          <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
-        </div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
-
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+    <div class="swiper-container" id="swiper-categorias">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__equipaje.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__mascotas.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
+        <div class="swiper-slide"><img src="./assets/iconos_categoria/iconos__accesorios digitales.png"></div>
       </div>
+      <!-- Add Pagination -->
+      <div class="swiper-pagination"></div>
+
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+    </div>
   </div>
 </nav>
 <div class="container">
-  <div class="row">
+  <div class="row label">
     <div class="col-xl-12">
-      <h3>Los mas vistos</h3>
+      <h2>Los mas vistos</h2>
     </div>
   </div>
- 
+
   <!-- Swiper -->
-  <div class="swiper-container" id="p_vistos">
+  <div class="swiper-container p_vistos" id="p_vistos">
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
     <div class="swiper-wrapper">
       <div class="swiper-slide"></div>
     </div>
-    <!-- Add Pagination -->
-    <div class="swiper-pagination"></div>
-
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
   </div>
 </div>
+
