--- a/src/app/product-box/product-box.component.html
+++ b/src/app/product-box/product-box.component.html
@@ -4,7 +4,7 @@
       <div class="card-columns">
         <div *ngFor="let productos of producto" class="card">
           <a routerLink="./products">
-            <img class="card-img-top img-fluid" src="./assets/producto-prueba.jpg" alt="Card image cap">
+            <!-- <img class="card-img-top" src="./assets/producto-prueba.jpg" alt="Card image cap"> -->
             <div class="card-body">
               <div class="card-text">
                 <h4>{{productos.name}}</h4>
